--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="project-1-SL-AS/style.css" rel="stylesheet">
+        <link href= 
     </head>    
 <Title> Blogging Page </Title> 
  	</Head> 
