--- a/project1.html
+++ b/project1.html
@@ -1,13 +1,13 @@
 
  <html> 
-   <!DOCSTYLE>
+   <!DOCSTYLE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
-        <link href="project-1-SL-AS/style.css" rel="stylesheet">
-        <link href= 
+        <link href="CSS/style.css" rel="stylesheet">
+        <link href= "JS/project1.js" rel= "javascript" 
     </head>    
 <Title> Blogging Page </Title> 
  	</Head> 
@@ -78,16 +78,6 @@
 </tbody>
 </tables>
 </div> 
-
-
-<footer class="page footer">
-<navbar-fixed-bottom>
-   <a href="#aboutus.html", rel= "About Us">Home</a>
-   <a href ="#privacypolicy.html",rel= "Privacy">Privacy Policy</a> 
-   <a href="#sitemap.html", rel="Sitemap">Site Maps</a> 
-</navbar-fixed-bottom>
-</section>
-</footer>
 
 </body>
 </html> 
