--- a/project1.html
+++ b/project1.html
@@ -7,35 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
         <link href="CSS/style.css" rel="stylesheet">
-        <link href= "JS/project1.js" rel= "javascript" 
+        <link href= "JS/project1.js" rel= "javascript">
     </head>    
 <Title> Blogging Page </Title> 
- 	</Head> 
+<header>
+  <div class= "container"> 
+  <nav>
+    <ul>
+   <li> <a href="#home.html", rel= "home">Home</a></li>
+   <li> <a href ="#newsletter.html",rel= "Newsletter">Newsletter</a> </li>
+   <li>  <a href="#community.html", rel="com">Community Forum</a> </li>
+    <li> <a href="#articles.html",rel="info">Articles</a></li>
+      <li>  <a href="#contact.html", rel="contact">Contact Us</a></li>
+     </ul>
+  </nav>
+     </div>
+
+     <div class = "search">
+      <div id="search">
+       <input id="searchInput"  type="text">
+          <button for="searchInput">Search</button>
+      </div>
+
+
+  </header> 
+ 
 <body> 
    <h1>Company's Updates</h1> 
-<header>
- <div id="container">
-        <div id="search">
-            <label for="searchInput">Search Users</label>
-            <input id="searchInput" type="text">
-        </div>
-
-<div class= "container"> 
-<nav>
-   <a href="#home.html", rel= "home">Home</a>
-   <a href ="#newsletter.html",rel= "Newsletter">Newsletter</a> 
-   <a href="#community.html", rel="com">Community Forum</a> 
-   <a href="#articles.html",rel="info">Articles</a>
-   <a href="#contact.html", rel="contact">Contact Us</a>
-</nav>
-   </div>
-</header> 
 
 <div class="container">
    <h1>Hello, Welcome Team! <span class="bold-text">To Frontier’s Blog Page</span></h1>
-    <img src="img/" alt="Company Logo">
+   <div class="thumbnial">
+    <img src="img/nubelson-fernandes-Yh2Y8avvPec-unsplash.jpg" width="750" height="500" alt="Company Logo">
+    </div>
                 </div>
-            </header>
+
  <section class="about-updates">
   <div class="container">
    <h2>This page is designed to <span class="bold-text">provide important company updates</span></h2>
